Do not synthesize mouse move event if the mouse isn't visible

BUG=b:62044128
BUG=755263
TEST=covered by unit tests.


Change-Id: Ifa4640abb1df4dbbbe437befdaef81d1d2b15a5f
Reviewed-on: https://chromium-review.googlesource.com/612720
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495503}
Former-commit-id: 75afeccdcb089f3acc6b344e8bb173f4a48f8b23